Exploratory analysis of purchases table

--- a/DataModeling.ipynb
+++ b/DataModeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "bcb52e3e-2cbf-4b68-92bb-9a1fb9a4bd80",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,226 @@
     "crm = pd.read_csv(\"./data/crm_export.csv\")\n",
     "customer = pd.read_csv(\"./data/customer_database.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "848d739a-c794-4741-bf3b-e0fc56a567f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(71519, 11)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchases.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fcc78e5d-aac8-4022-977b-3d502fa50a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "event_time              0\n",
+       "product_id              0\n",
+       "category_id             0\n",
+       "category_code       16739\n",
+       "brand                5707\n",
+       "price                   0\n",
+       "session_id              0\n",
+       "customer_id         18448\n",
+       "guest_first_name    53071\n",
+       "guest_surname       53071\n",
+       "guest_postcode      53071\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check for missing data per column \n",
+    "purchases.isnull().sum()\n",
+    "\n",
+    "\n",
+    "#there are 18448 missing customer_ids and 53071 missing guset values which is 71519 total whcih is the total rows in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b78343b0-bb0a-498d-af47-22bc4731c764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "purchases[\"is_guest\"] = purchases[\"customer_id\"].isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "474a9cda-ed84-45f5-a959-53590582d810",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event_time</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>category_code</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>price</th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>guest_first_name</th>\n",
+       "      <th>guest_surname</th>\n",
+       "      <th>guest_postcode</th>\n",
+       "      <th>is_guest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [event_time, product_id, category_id, category_code, brand, price, session_id, customer_id, guest_first_name, guest_surname, guest_postcode, is_guest]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#the guest checkouts and the customer Ids are assumed to be mutually exclusive\n",
+    "purchases[purchases[\"is_guest\"] & purchases[\"customer_id\"].notnull()]\n",
+    "purchases[(purchases[\"is_guest\"] ==False) & purchases[\"customer_id\"].isnull()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19a5e823-7c8b-46eb-9664-5a7660c84f64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we can see that all rows are either a guest check out or a purchase made by a registered customer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87744757-83f6-4c43-82b5-2dae26bc8853",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#what percentage of records are guests checkouts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3bee0255-7762-4563-837b-31c2768676d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_guest\n",
+       "False    0.742055\n",
+       "True     0.257945\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchases[\"is_guest\"].value_counts(normalize=True)\n",
+    "\n",
+    "#this tells us the 25% of the ros are guest checkouts \n",
+    "#one row represents a purchases item not a customer record, so the proportion of customers who checked out as guests is NOT 25%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "94ec9091-3e65-49a8-a1fc-2880b47d594d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8301\n",
+      "0.2495640671036017\n"
+     ]
+    }
+   ],
+   "source": [
+    "#the actual proportion is \n",
+    "guest_columns = [\"guest_first_name\", \"guest_surname\", \"guest_postcode\"]\n",
+    "unique_guests= purchases[guest_columns].drop_duplicates() #get unique combination of guest columns\n",
+    "print(len(unique_guests))\n",
+    "unique_customers= purchases[\"customer_id\"].unique() #get all unique customer IDs\n",
+    "cust_total = len(unique_customers) + len(unique_guests)\n",
+    "print(len(unique_guests) / (cust_total-1)) #subtract 1 from the unique customer count becuase NULL ius also counted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3847e357-77e9-41ff-ba17-59affc52b1db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#there are 8301 unique combinations of guests "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061fedb1-e71e-44ce-aaa7-c52a895ef967",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -597,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
